@@ -1,5 +1,11 @@
 0.20.28	UNRELEASED
 
+ * Fix hook test on Mac OSX / Linux when dulwich is
+   not installed system-wide. (Jelmer Vernooĳ, #919)
+
+ * Cope with gecos being unset.
+   (Jelmer Vernooĳ, #917)
+
 0.20.27	2022-01-04
 
  * Allow adding files to repository in pre-commit hook.
